[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/ball.png" type="Texture" id=1]
[ext_resource path="res://test scene/Node2D.gd" type="Script" id=2]
[ext_resource path="res://sprites/circle_non_triggered.png" type="Texture" id=3]
[ext_resource path="res://sprites/circle_triggered.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.9796

[sub_resource type="CircleShape2D" id=2]
radius = 24.633

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2( 284.728, 166.67 )
input_pickable = true
contacts_reported = 1
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Ball_Hitbox" type="CollisionShape2D" parent="Ball"]
position = Vector2( -0.363892, 0.235428 )
shape = SubResource( 1 )

[node name="Ball_Sprite" type="Sprite" parent="Ball"]
position = Vector2( -0.0159302, 0.297363 )
scale = Vector2( 1.05203, 1.04459 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 209.0
margin_top = 27.55
margin_right = 352.0
margin_bottom = 70.55
text = "NO COLLISION YET"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point_Thingy" type="StaticBody2D" parent="."]
position = Vector2( 284.062, 384.077 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="Point_Thingy_Hitbox" type="CollisionShape2D" parent="Point_Thingy"]
shape = SubResource( 2 )

[node name="Point_Thingy_Sprite" type="AnimatedSprite" parent="Point_Thingy"]
frames = SubResource( 3 )
[connection signal="body_entered" from="Ball" to="." method="_on_Ball_body_entered"]
